prevent scrollable overflow on some mobile browsers

--- a/style.less
+++ b/style.less
@@ -22,6 +22,8 @@ body {
     color: var(--text);
     font-family: sans-serif;
     transition: background-color 0.3s var(--trans), color 0.3s var(--trans);
+    position: absolute; // prevents overflow on some mobile browsers
+    width: 100vw;
     height: 100vh;
     overflow-x: hidden;
     overflow-y: auto;
